# abcoder

./: .gitignore  .gitmodules  .golangci.yml  .licenserc.yaml  .typos.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cmd_init_spec.go  go.go  go.mod  go.sum  main.go  run_analyzer.sh  version.go
.github/workflows/: go-test.yml  pr-check.yml  regression.yml  simple_checks.yml
docs/: claude-code-spec.md  cpp_known_issues.md  localsession.json  lsp-installation-en.md  lsp-installation-zh.md  metainfo.json  parser-en.md  parser-zh.md  scanner_by_treesitter_analysis.md  system_architecture.md  tree-sitter_and_lsp_zh.md  uast_conversion_guide.md  uniast-en.md  uniast-zh.md  writer-zh.md
docs/.claude/: CLAUDE.md  README.md  settings.json
idl/: get_file_structure.proto  get_file_symbol.proto  uniast.proto
internal/cmd/: init_spec.go
internal/utils/: cmd_init_spec.go  err.go  file.go  file_test.go  marker.go  marker_test.go  serdes.go  slice.go  strings.go
lang/: parse.go  parse_cpp_test.go  parse_test.go  write.go
lang/collect/: collect.go  collect_test.go  cpp_body_test.go  (+4 more)
llm/: api.go  model.go  react.go
python-parser/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
python-parser/e2e/mock-python/: __init__.py  pyproject.toml  test.py
python-parser/e2e/mock-python/pkg_a/: __init__.py  module_a.py
python-parser/e2e/mock-python/pkg_b/: module_b.py
script/: ModelFile  ModelFile-func  ModelFile-type  check_all_linenos.sh  check_lineno.py  compress.sh  diffjson.py  make_parser.sh  pretty_json.go  run_all_testdata.sh  run_testdata.sh
src/: export.rs  lib.rs  main.rs  parse.rs  repo.rs
test_simple_java/: SimpleTest.java
testdata/: README_en.md  README_zh.md
ts-parser/: .eslintrc.json  .gitignore  .prettierignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
version/: version.go
(+471 files in other folders)
