[package]
name = "ABCoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "^1", features = ["full"] }
serde_json = "1.0"
serde_yaml = "0.8"
walkdir = "^2.3"
regex = "^1.5"
ryze = { git = "https://github.com/welkeyever/ryze.git" }
hyper = { version = "0.14", features = ["full"] }
serde_urlencoded = "0.7.0"
futures = "0.3"
async-recursion = "1.0.5"
