[package]
name = "ABCoder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
tokio = { version = "^1", features = ["full"] }
serde_json = "1.0"
serde_yaml = "0.8"
walkdir = "^2.3"
regex = "^1.5"
ryze = { git = "https://github.com/welkeyever/ryze.git" }
hyper = { version = "0.14", features = ["full"] }
serde_urlencoded = "0.7.0"
futures = "0.3"
async-recursion = "1.0.5"
csv = "1.1"
text-splitter = "0.6.3"
syn = { version = "2.0.59", features = ["full"] }
quote = "1.0.36"
rustfmt = "0.10.0"
lazy_static = "1.4.0"
dotenv = "0.15"
paste = "1.0.15"